--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <data>
-
         <variable
             name="shoeDetailViewModel"
             type="com.udacity.shoestore.detail.ShoeDetailViewModel" />
@@ -32,6 +30,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:inputType="textPersonName"
+            android:text="@={shoeDetailViewModel.shoe.name}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_shoe_name" />
@@ -54,6 +53,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:inputType="textPersonName"
+            android:text="@={shoeDetailViewModel.shoe.company}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_company" />
@@ -76,6 +76,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:inputType="numberDecimal"
+            android:text="@={shoeDetailViewModel.shoe.size}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_size" />
@@ -98,6 +99,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:singleLine="true"
+            android:text="@={shoeDetailViewModel.shoe.description}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_description" />
