* update two ways data binding, remove unused code

--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -4,8 +4,8 @@
 
     <data>
         <variable
-            name="shoeDetailViewModel"
-            type="com.udacity.shoestore.detail.ShoeDetailViewModel" />
+            name="shoe"
+            type="com.udacity.shoestore.models.Shoe"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,7 +30,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:inputType="textPersonName"
-            android:text="@={shoeDetailViewModel.shoe.name}"
+            android:text="@={shoe.name}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_shoe_name" />
@@ -53,7 +53,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:inputType="textPersonName"
-            android:text="@={shoeDetailViewModel.shoe.company}"
+            android:text="@={shoe.company}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_company" />
@@ -76,7 +76,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:inputType="numberDecimal"
-            android:text="@={shoeDetailViewModel.shoe.size}"
+            android:text="@={shoe.size}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_size" />
@@ -99,7 +99,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:singleLine="true"
-            android:text="@={shoeDetailViewModel.shoe.description}"
+            android:text="@={shoe.description}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_description" />
