--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" >
 
+    <!-- TODO Add a Shoe variable to the layout -->
     <data>
         <variable
             name="shoe"
